# TrafficDetector

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
backend/app/: main.py  worker.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/core/: celery_app.py  config.py  db.py  logger.py  security.py
backend/app/models/: task.py
backend/app/schemas/: analytics.py  detection.py
backend/app/services/: bigquery.py  file.py  task.py  workflow.py  yolo.py
backend/tests/: conftest.py  test_api.py  test_bigquery_service.py  test_config.py  test_db_integration.py  test_file_service.py  test_logger.py  test_service.py  test_worker.py  test_workflow.py  test_yolo_service.py
data/scripts/: start.sh
frontend/: app.py
frontend/tests/: test_ui.py
infra/: iam.tf  main.tf  variables.tf
scripts/: start.sh
