[project]
name = "trafficdetector"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
dependencies = [
    "fastapi[standard]>=0.123.4",
    "gradio>=6.0.2",
    "httpx>=0.28.1",
    "opencv-python-headless>=4.12.0.88",
    "pre-commit>=4.5.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "ruff>=0.14.7",
    "supervision>=0.27.0",
    "ultralytics>=8.3.234",
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
]

line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]
